--- a/css/theme/greeeen.css
+++ b/css/theme/greeeen.css
@@ -41,7 +41,9 @@
  * VARIABLES
  *********************************************/
 :root {
-  --green: #5ab041;
+  --green-dark: hsl(106.5, 40%, 30%);
+  --green: hsl(106.5, 46.1%, 47.3%);
+  --green-light: hsl(106.5, 66.1%, 87%);
   --pink: hsl(335.9, 69.9%, 51.8%);
   --pink-highlight: hsl(335.9, 80%, 90%);
   --black: #222;
@@ -391,7 +393,7 @@ h2.center svg text {
   padding: 10px;
 }
 .reveal ul.grid li.fragment.current-fragment {
-  background: var(--pink-highlight);
+  background: var(--green-light);
 }
 
 .reveal ul.grid li .emoji {
