--- a/css/theme/greeeen.css
+++ b/css/theme/greeeen.css
@@ -552,8 +552,8 @@ h2.pink svg text {
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
-  background: rgba(0, 0, 0, 0.2);
-  color: #2a76dd; }
+  background: var(--green-light);
+  color: var(--pink); }
 
 .reveal .progress span {
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
